<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_sms"
        android:icon="@drawable/baseline_message_black_24dp"
        android:title="@string/nav_message" />

    <item
        android:id="@+id/nav_call"
        android:icon="@drawable/baseline_offline_bolt_black_24dp"
        android:title="@string/nav_call" />

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/baseline_bar_chart_black_24dp"
        android:title="@string/nav_statistics" />


</menu>